package mysql;message sp_login_auth {    required uint32 v_user_id        = 1 ;    required uint32 v_role_id        = 2 ;    required uint32 v_sex            = 3 ;    required uint32 v_prof           = 4 ;    required string v_name           = 5 ;                                         	required string p_openid         = 6 ;	required uint32 p_yel_vip        = 7 ;	required uint32 p_server_id      = 8 ;	required uint32 p_agent_id       = 9 ;	required uint32 p_client_id      = 10;	                                 	required uint32 v_level          = 11;	required uint32 v_fighting_power = 12;}message sp_login_auths {    required string role_id        = 1;    required string role_name      = 2;    required string sex            = 3;    required string profession     = 4;    required string level          = 5;    required string fighting_power = 6;}